gcc/testsuite/rust/rustc/ui/pattern/usefulness/refutable-pattern-in-fn-arg_dg.rs
fn main() {
    let f = |3: isize| println!("hello");
// { dg-error ".E0005." "" { target *-*-* } .-1 }
// { dg-error ".E0005." "" { target *-*-* } .-2 }
    f(4);
}

